--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
     <!-- Github ribbon -->
     <a href="https://github.com/Asish1757/Snake_Game" target="_blank" class="github-ribbon">
-        <img style="height: 25px; margin: 10px 10px;" src="img/github Icon.jpg Icon.jpg" alt="Fork on GitHub"></a>
+        <img style="height: 25px; margin: 10px 10px;" src="img/githubicon.jpg" alt="Fork on GitHub"></a>
 
     <!-- Load scripts -->
     <script src="js/jquery-2.1.4.min.js"></script>
