--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <!-- Main container -->
     <div id="container">
         <!-- Page header -->
-        <a href="https://asish1757.github.io/Snake_Game/">
+        <a href="https://asish1757.github.io/Snake-Mania/">
             <h1>Snake</h1>
         </a>
         <h3>A pure HTML5 classic game</h3>
@@ -98,7 +98,7 @@
     <!-- end container -->
 
     <!-- Github ribbon -->
-    <a href="https://github.com/Asish1757/Snake_Game" target="_blank" class="github-ribbon">
+    <a href="https://github.com/Asish1757/Snake-Mania" target="_blank" class="github-ribbon">
         <img style="height: 25px; margin: 10px 10px;" src="img/githubicon.jpg" alt="Fork on GitHub"></a>
 
     <!-- Load scripts -->
