--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body id="main">
     <!-- Loading screen -->
     <div id="loader">
-        <h1 id="loader-title">Snake</h1>
+        <h1 id="loader-title">Snake Mania</h1>
         <p id="loading-text">Loading...</p>
         <div id="bar-container">
             <div id="bar"></div>
@@ -32,7 +32,7 @@
     <div id="container">
         <!-- Page header -->
         <a href="https://asish1757.github.io/Snake-Mania/">
-            <h1>Snake</h1>
+            <h1>Snake Mania</h1>
         </a>
         <h3>A pure HTML5 classic game</h3>
         <!-- end header -->
