--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div id="container">
         <!-- Page header -->
         <a href="https://asish1757.github.io/Snake-Mania/">
-            <h1>Snake Mania</h1>
+            <h1>Snake Lutun</h1>
         </a>
         <h3>A pure HTML5 classic game</h3>
         <!-- end header -->
